--- a/releated-work.tex
+++ b/releated-work.tex
@@ -125,4 +125,4 @@ Benkacem \textit{et al.} [JSAC'18] introduce a CDNaaS platform whereby a user ca
 
 
 
-The integrati Traditionally, \ac{RoF} system are mainly used to decrease the energy consumption of the infrastructure \cite{Hall2013}. However, for from the IoT perspective, this is not a key point in the utilization of the \ac{RoF} technology.
+The integrati Traditionally, system are mainly used to decrease the energy consumption of the infrastructure \cite{Hall2013}. However, for from the IoT perspective, this is not a key point in the utilization of the technology.
