Adding research goals paragraph

--- a/paper.tex
+++ b/paper.tex
@@ -43,6 +43,8 @@
 
 \begin{thebibliography}{9}
 
+\bibitem{shenIWQoS19} Gengbiao Shen, Qing Li, Yong Jiang, Richard Sinnott, Dong Lin, Zehua Guo, Yi Wang. Chunk-Level Request-Grant-Transfer Mode for QoE-Sensitive Video Delivery in CDN. IWQoS, 2019.
+
 \bibitem{Bittencourt} Luiz F. Bittencourt, Márcio Moraes Lopes, Ioan Petri, Omer F. Rana \emph{Towards Virtual Machine Migration in Fog Computing}. 10th International Conference on P2P, Parallel, Grid, Cloud and Internet Computing. 2015.
 
 \bibitem{BittencourtII} Luiz F. Bittencourt, Omer F. Rana, and Ioan Petri,. \emph{Cloud Computing at the Edges}. Springer International Publishing. 2016. pp. 3–12.
