Updating research-goals.tex

--- a/research-goals.tex
+++ b/research-goals.tex
@@ -4,9 +4,18 @@
 \subsection*{Research Goals}
 \label{sec:research-goals}
 
+Considering that each particular scenario has its own requirements, there is no one-to-one relationship between all classes of applications presented here and all classes of constrained devices presented in Section 2.1.
+
+
+Considering a set of multimedia services dynamically deployed in the fog/cloud network. Users can access multimedia content through a variety of communication technologies. In scenarios like this - common at the edge of the network - we in the mist can provide computing and storage services [?]. In this context, we introduced a multi-level architecture (Figure ??). The top level consists of cloud servers, which can be located in public or private clouds. Clouds can be, for example, a Video-on-Demand provider.
+
+The other three levels represent the network mist / edge. This work takes into account edge nodes with computational capacity and storage, and classifies them hierarchically according to their coverage and communication technology [?]. In a multi-level ecosystem, the Core Network Regional Edge can perform management within a city, for example, baseband unit (BBU) and Internet service provider (ISP). The Access Edge Network, which supports a few dozen or perhaps a few hundred local nodes in the fog, can be represented by a Base Station or Access Point. Edge Gateways can be deployed on local fog nodes such as personal computers, laptops, and smartphones where the node delegates video content over wireless connections.
+
+
 % Research goals, including a problem statement.
 Currently the Internet is based on the characteristics of the best effort (Best-Effort), with no guarantee of level of service, beyond that, the congestion control and the lossless through rate-based transfer for conflict-free matching is deployed in IP layer. The existing schemes suitable for chunk delivery cannot be directly utilized in PoPs due to several issues:
 \textit{i)} One chunk may have several copies, which impacts on the selection of origin servers; \textit{ii)} Defferent chunks can have distinct impacts on thre Quality of Experience~(QoE), e.g., initial delay and smoothness, which is crucial to chunk transfer but not considered in the original schemes~\cite{shenIWQoS19}.
+
 
 We deployed some experiments in The Stable Marriage Problem in the parallel Multipoint-to-Multipoint (MP2MP) transfer scenario in order to improve the QoE in DASH chunk delivery in hybrid scenarious. 
 
