Updates from Overleaf

--- a/abstract.tex
+++ b/abstract.tex
@@ -2,8 +2,21 @@
 	{\bf Abstract}
 \end{center}
 	
-	The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. In order to improve on this matter, this work proposes a set of services to video streaming in a multi-tier fog computing environment. It also takes into consideration classified hierarchical tiers and the ETSI-NFV architecture.
+
+The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. Video Streaming services companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating Quality of Experience (QoE) guarantees. The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. 
+In order to improve on this matter, this work proposes a set of services to video streaming in a multi-tier fog computing environment.
+
+The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. In order to improve on this matter, this work proposes a set of services to video streaming in a multi-tier fog computing environment. It also takes into consideration classified hierarchical tiers and the ETSI-NFV architecture.
+
 The main goal is to design and assess a reliable and high-quality multi-tier services architecture to be used in the fog/edge environments.
 We discuss the impact on the performance introduced by the multi-tier fog/edge computing, and also how the services may be used to improving the Quality of Experience (QoE) for end-users.
 	
-	The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. CDN providers like Akamai, LimeLight, Level 3 and MaxCDN have made major investments in leading edge servers in emerging markets such as Asia, South America and Africa. VoD service companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating QoE guarantees. In addition, this paradigm has attracted companies such as Intel, Qualcomm, IBM, Cisco, who usually mention a big growth on the edge of the network in the near future.
+The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. CDN providers like Akamai, LimeLight, Level 3 and MaxCDN have made major investments in leading edge servers in emerging markets such as Asia, South America and Africa. VoD service companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating QoE guarantees. In addition, this paradigm has attracted companies such as Intel, Qualcomm, IBM, Cisco, who usually mention a big growth on the edge of the network in the near future.
+
+%
+% ===========================================================================================
+%
+% Having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources. The framework solution can be used to assist the content providers joinging the content in the edge of the network, in this way, the regionals networks may attend the end-users. Moreover, due to intense competition among the nodes, this available bandwidth is also not fully utilized. Based on these, various population control measures have been suggested for both mesh-based and tree-based systems.
+
+
+% Content delivery in wireless caching networks via device-to-device (D2D) communications can effectively offload the traffic burden and reduce the delivery delay and the energy consumption
