--- a/contributions.tex
+++ b/contributions.tex
@@ -2,3 +2,5 @@
 \label{sec:contributions}
 
 % Description of the work you'd like to do, as well as the expected outcomes and results.
+
+Having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources. The framework solution can be used to assist the content providers joinging the content in the edge of the network, in this way, the regionals networks may attend the end-users. Moreover, due to intense competition among the nodes, this available bandwidth is also not fully utilized. Based on these, various population control measures have been suggested for both mesh-based and tree-based systems.
